<resources>
    <string name="app_name">Flight Gear Controller</string>
    <string name="ip">IP address</string>
    <string name="port">port number</string>
    <string name="connect_btn">Connect</string>
    <string name="rudderLabel">Rudder: \t</string>
    <string name="throttleLabel">Throttle: \t</string>
    <string name="startMessage">Please connect to machine running the Flight Gear application using the machine\'s IP
        address and port number in order to proceed</string>
</resources>
