<?xml version="1.0" encoding="utf-8"?>
<!-- Creating the layout of the application -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!-- Getting a reference to the ViewModel and importing the View class -->
    <data>
        <import type="android.view.View" />
        <variable name="viewModel" type="com.flightgearcontroller.ViewModel" />
    </data>
    <!-- Creating the relative layout of the view -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_alignParentTop="true">
            <!-- Creating a Button to connect to the simulator -->
            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/port"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="@{()-> viewModel.connectToSimulator()}"
                android:text="@string/connect_btn"
                android:textAlignment="center" />
            <!-- Creating a EditText to get the input for the IP address -->
            <EditText
                android:id="@+id/ip"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:digits="0123456789."
                android:hint="@string/ip"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@={viewModel.ip}"
                android:textAlignment="center" />
            <!-- Creating a EditText to get the input for the port number -->
            <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/ip"
                android:digits="0123456789."
                android:hint="@string/port"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@={viewModel.port}"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/connect"
                android:layout_centerHorizontal="true"
                android:text="@{viewModel.message}"
                android:textAlignment="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_alignParentBottom="true">
            <!-- Creating a SeekBar to control the rudder -->
            <SeekBar
                android:id="@+id/rudder"
                android:layout_width="340dp"
                android:layout_height="30dp"
                android:layout_above="@id/rudderLabel"
                android:layout_centerHorizontal="true"
                android:max="2000"
                android:progress="@={viewModel.rudder, default=1000}"
                android:visibility="@{viewModel.showControls ? View.VISIBLE : View.GONE}" />
            <!-- Creating a SeekBar to control the throttle -->
            <SeekBar
                android:id="@+id/throttle"
                android:layout_width="330dp"
                android:layout_height="320dp"
                android:layout_above="@id/rudder"
                android:layout_marginStart="-155dp"
                android:layout_marginBottom="20dp"
                android:max="1000"
                android:progress="@={viewModel.throttle, default=0}"
                android:rotation="-90"
                android:visibility="@{viewModel.showControls ? View.VISIBLE : View.GONE}" />
            <!-- Creating the Joystick view -->
            <com.flightgearcontroller.Joystick
                android:id="@+id/joystick"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_above="@id/rudder"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:visibility="@{viewModel.showControls ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/rudderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/rudderLabel"
                android:visibility="@{viewModel.showControls ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/throttleLabel"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_above="@id/rudder"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="145dp"
                android:rotation="-90"
                android:text="@string/throttleLabel"
                android:textColor="#000000"
                android:visibility="@{viewModel.showControls ? View.VISIBLE : View.GONE}" />
        </RelativeLayout>
    </RelativeLayout>
</layout >